--- a/projects/boston_housing/boston_housing.ipynb
+++ b/projects/boston_housing/boston_housing.ipynb
@@ -153,11 +153,11 @@
    "source": [
     "**Answer: ** \n",
     "\n",
-    "'RM' - positive correlation with price\n",
+    "'RM' - More rooms means bigger houses, bigger houses mean more expensive houses, a home near expensive houses is more likely to be expensive also, therefore RM likely has a positive correlates with house price\n",
     "\n",
-    "'LSTAT' - negative correlation with price\n",
+    "'LSTAT' - The working poor cannot afford to buy expensive houses, the working poor are more likely to live in less expensive houses, a home near less expensive houses is more likely to be less expensive also, the percentage of working poor in a neighbor will have likely have a negative correlation with house price\n",
     "\n",
-    "'PRTRATIO' - negative correlation with price"
+    "'PRTRATIO' - Neighborhoods with more expensive houses generally have better schools because schools recieve funding through property taxes, better schools have a lower ratio of students to teachers, the PTRATIO will have likely have a negative correlation with housing prices"
    ]
   },
   {
@@ -250,7 +250,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "The model has a coefficient of determination, R^2, of 0.923, which means that it performed well at predicting the true value. And just looking at the list, the predicted and true values are quite similar. The success or failure of the model, however, would depend on the level of precision required for this task. If predictions could not vary more than 5% for the model to succeed, then this model would clearly fail.\n"
    ]
   },
   {
@@ -370,7 +372,7 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "For the max depth 3 curve the testing and training curves are converging as the number of training points increases. This means that the model is most likely not overfitting the data (hence the decreeasing test curve and converging of the two curves). More data points would make the model better but not significantly so (the gains seem to have flatlined)."
+    "For the max depth 3 curve the testing and training curves are converging as the number of training points increases. The lines are converging from above and below. This means that the model is most likely not overfitting the data (hence the decreasing test curve and converging of the two curves). More data points would make the model better but not significantly so (the gains seem to have flatlined)."
    ]
   },
   {
@@ -420,7 +422,7 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "With a max depth of 1 the model suffers from high bias. When trained with a max depth of 10 it suffers from high variance. "
+    "With a max depth of 1 the model suffers from high bias because the testing and training set perform almost equally poorly. When trained with a max depth of 10 it suffers from high variance because the training set greatly out performs the testing set."
    ]
   },
   {
@@ -464,7 +466,7 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "Grid search is used to narrow the list of variables used in a ML algorithm in order to avoid over fitting."
+    "Grid search is used to narrow the list of variables used in a ML algorithm in order to avoid over fitting. It does this by selecting pairs of variables from the dataset, training with those variables, and comparing the performance of a set of variable pairs. The variables with the best performance (according to some performance metric) are selected by the algorithm to be used in the actual model."
    ]
   },
   {
@@ -482,7 +484,9 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "K-fold cross validation is a way of splitting the data into training and testing sets for the purpose of validation. The dataset is divided into k subsets where k-1 of those sets are used for training and 1 is used for testing. This technique also provides a method for testing the generalizability of grid search. "
+    "K-fold cross validation is a way of splitting the data into training and testing sets for the purpose of validation. The dataset is divided into k subsets where k-1 of those sets are used for training and 1 is used for testing. The average performance of each k subset is averaged to calculate a total performance score. \n",
+    "\n",
+    "This technique also provides a method for testing the generalizability of grid search. If grid search performs well only on a specific train-test split then this will be detecting using k-fold cross validation (because the model will be tested on a variety of train-test splittings)."
    ]
   },
   {
@@ -536,7 +540,8 @@
     "    scoring_fnc = make_scorer(performance_metric)\n",
     "\n",
     "    # TODO: Create the grid search object\n",
-    "    grid = GridSearchCV(regressor, params)\n",
+    "    grid = GridSearchCV(regressor, params, scoring=scoring_fnc, cv=cv_sets)\n",
+    " \n",
     "\n",
     "    # Fit the grid search object to the data to compute the optimal model\n",
     "    grid = grid.fit(X, y)\n",
@@ -648,7 +653,7 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "The first home seems average. The second home seems below average. The third home seems above average. Based on this rough classification, I'd suggest 1 sell for the average home cost of 454k, 2 for one std below the mean (290k), and 3 one std above the mean (610k).\n",
+    "The first home seems average. The second home seems below average. The third home seems well above average. Based on this rough classification, I'd suggest the first sell for the average home cost of 454k, the second sell for one std below the mean (290k), and the third sell for at least two std above the mean (780k) because it has so many rooms, almost zero people in the neighborhood in poverty, and a very low student:teacher ratio.\n",
     "\n",
     "These estimates were not too far off from those predicted by the algorithm."
    ]
