--- a/projects/student_intervention/student_intervention.ipynb
+++ b/projects/student_intervention/student_intervention.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -97,10 +97,10 @@
      "output_type": "stream",
      "text": [
       "Total number of students: 395\n",
-      "Number of features: 31\n",
+      "Number of features: 30\n",
       "Number of students who passed: 265\n",
       "Number of students who failed: 130\n",
-      "Graduation rate of the class: 0.67%\n"
+      "Graduation rate of the class: 67.09%\n"
      ]
     }
    ],
@@ -109,7 +109,7 @@
     "n_students = student_data.shape[0]\n",
     "\n",
     "# TODO: Calculate number of features\n",
-    "n_features = student_data.shape[1]\n",
+    "n_features = student_data.shape[1] - 1 #for target column\n",
     "\n",
     "# TODO: Calculate passing students\n",
     "n_passed = (student_data.loc[:,['passed']]=='yes').sum()[0]\n",
@@ -118,7 +118,7 @@
     "n_failed = (student_data.loc[:,['passed']]=='no').sum()[0]\n",
     "\n",
     "# TODO: Calculate graduation rate\n",
-    "grad_rate = (student_data.loc[:,['passed']]=='yes').mean()[0]\n",
+    "grad_rate = (student_data.loc[:,['passed']]=='yes').mean()[0] * 100\n",
     "\n",
     "# Print the results\n",
     "print \"Total number of students: {}\".format(n_students)\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -670,26 +670,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "SVC: \n",
+      "\n",
       "Training a SVC using a training set size of 100. . .\n",
-      "Trained model in 0.0015 seconds\n",
+      "Trained model in 0.0016 seconds\n",
       "Made predictions in 0.0008 seconds.\n",
       "F1 score for training set: 0.8591.\n",
-      "Made predictions in 0.0008 seconds.\n",
+      "Made predictions in 0.0007 seconds.\n",
       "F1 score for test set: 0.7838.\n",
       "Training a SVC using a training set size of 200. . .\n",
-      "Trained model in 0.0038 seconds\n",
-      "Made predictions in 0.0027 seconds.\n",
+      "Trained model in 0.0034 seconds\n",
+      "Made predictions in 0.0024 seconds.\n",
       "F1 score for training set: 0.8693.\n",
-      "Made predictions in 0.0013 seconds.\n",
+      "Made predictions in 0.0014 seconds.\n",
       "F1 score for test set: 0.7755.\n",
       "Training a SVC using a training set size of 300. . .\n",
-      "Trained model in 0.0077 seconds\n",
+      "Trained model in 0.0073 seconds\n",
       "Made predictions in 0.0055 seconds.\n",
       "F1 score for training set: 0.8692.\n",
-      "Made predictions in 0.0017 seconds.\n",
+      "Made predictions in 0.0016 seconds.\n",
       "F1 score for test set: 0.7586.\n",
+      "\n",
+      "DecisionTreeClassifier: \n",
+      "\n",
       "Training a DecisionTreeClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0009 seconds\n",
+      "Trained model in 0.0008 seconds\n",
       "Made predictions in 0.0002 seconds.\n",
       "F1 score for training set: 1.0000.\n",
       "Made predictions in 0.0002 seconds.\n",
@@ -699,28 +705,31 @@
       "Made predictions in 0.0002 seconds.\n",
       "F1 score for training set: 1.0000.\n",
       "Made predictions in 0.0002 seconds.\n",
-      "F1 score for test set: 0.7231.\n",
+      "F1 score for test set: 0.7132.\n",
       "Training a DecisionTreeClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0022 seconds\n",
-      "Made predictions in 0.0004 seconds.\n",
+      "Trained model in 0.0021 seconds\n",
+      "Made predictions in 0.0002 seconds.\n",
       "F1 score for training set: 1.0000.\n",
       "Made predictions in 0.0002 seconds.\n",
-      "F1 score for test set: 0.6842.\n",
+      "F1 score for test set: 0.7167.\n",
+      "\n",
+      "GaussianNB: \n",
+      "\n",
       "Training a GaussianNB using a training set size of 100. . .\n",
-      "Trained model in 0.0006 seconds\n",
-      "Made predictions in 0.0003 seconds.\n",
+      "Trained model in 0.0007 seconds\n",
+      "Made predictions in 0.0006 seconds.\n",
       "F1 score for training set: 0.8550.\n",
-      "Made predictions in 0.0003 seconds.\n",
+      "Made predictions in 0.0004 seconds.\n",
       "F1 score for test set: 0.7481.\n",
       "Training a GaussianNB using a training set size of 200. . .\n",
-      "Trained model in 0.0007 seconds\n",
-      "Made predictions in 0.0003 seconds.\n",
+      "Trained model in 0.0009 seconds\n",
+      "Made predictions in 0.0004 seconds.\n",
       "F1 score for training set: 0.8321.\n",
       "Made predictions in 0.0003 seconds.\n",
       "F1 score for test set: 0.7132.\n",
       "Training a GaussianNB using a training set size of 300. . .\n",
-      "Trained model in 0.0008 seconds\n",
-      "Made predictions in 0.0005 seconds.\n",
+      "Trained model in 0.0010 seconds\n",
+      "Made predictions in 0.0004 seconds.\n",
       "F1 score for training set: 0.8088.\n",
       "Made predictions in 0.0003 seconds.\n",
       "F1 score for test set: 0.7500.\n"
@@ -743,29 +752,26 @@
     "clfs = [clf_A, clf_B , clf_C]\n",
     "\n",
     "# TODO: Set up the training set sizes\n",
-    "X_train_100 = X_train.iloc[0:100,]\n",
-    "y_train_100 = y_train.iloc[0:100,]\n",
-    "\n",
-    "X_train_200 = X_train.iloc[0:200,]\n",
-    "y_train_200 = y_train.iloc[0:200,]\n",
     "\n",
     "X_train_300 = X_train\n",
     "y_train_300 = y_train\n",
     "\n",
     "# TODO: Execute the 'train_predict' function for each classifier and each training set size\n",
     "# train_predict(clf, X_train, y_train, X_test, y_test)\n",
-    " \n",
-    "train_predict(clf_A, X_train_100, y_train_100, X_test, y_test)\n",
-    "train_predict(clf_A, X_train_200, y_train_200, X_test, y_test)\n",
-    "train_predict(clf_A, X_train_300, y_train_300, X_test, y_test)\n",
     "\n",
-    "train_predict(clf_B, X_train_100, y_train_100, X_test, y_test)\n",
-    "train_predict(clf_B, X_train_200, y_train_200, X_test, y_test)\n",
-    "train_predict(clf_B, X_train_300, y_train_300, X_test, y_test)\n",
-    "    \n",
-    "train_predict(clf_C, X_train_100, y_train_100, X_test, y_test)\n",
-    "train_predict(clf_C, X_train_200, y_train_200, X_test, y_test)\n",
-    "train_predict(clf_C, X_train_300, y_train_300, X_test, y_test)\n"
+    "\n",
+    "\n",
+    "# loop thru models, then thru train sizes\n",
+    "for clf in clfs:\n",
+    "\n",
+    "    # show the estimator type\n",
+    "    print \"\\n{}: \\n\".format(clf.__class__.__name__)\n",
+    "\n",
+    "    # loop thru training sizes\n",
+    "    for n in [100, 200, 300]:\n",
+    "        np.random.seed(0)\n",
+    "        # create training data from first 100, then 200, then 300 points\n",
+    "        train_predict(clf, X_train[:n], y_train[:n], X_test, y_test)\n"
    ]
   },
   {
@@ -784,17 +790,20 @@
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |  0.0014 seconds         |   0.0008      |   0.8591               |     0.7838            |\n",
+    "| 100               |      0.0016         |   0.0008      |   0.8591               |     0.7838            |\n",
     "| 200               |      0.0035          |       0.0025          |    0.8693         |      0.7755       |\n",
     "| 300               |      0.0079            |     0.0050             |   0.8692         |    0.7586      |\n",
+    "\n",
     "\n",
     "** Classifer 2 - Decision Tree **  \n",
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |      0.0014                   |   0.0002        |     1.0000      |     0.6491      |\n",
-    "| 200               |     0.0016             |      0.0002         |     1.0000       |     0.7328      |\n",
-    "| 300               |      0.0021           |       0.0003           |    1.0000       |     0.7458     |\n",
+    "| 100               |      0.0008                   |   0.0002        |     1.0000      |     0.6942      |\n",
+    "| 200               |     0.0016             |      0.0002         |     1.0000       |     0.7132      |\n",
+    "| 300               |      0.0021           |       0.0003           |    1.0000       |     0.7167     |\n",
+    "\n",
+    "\n",
     "\n",
     "** Classifer 3 - GaussianNB **  \n",
     "\n",
@@ -802,7 +811,7 @@
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
     "| 100               |    0.0008            |      0.0003             |     0.8550      |     0.7481      |\n",
     "| 200               |    0.0008               |      0.0004            |   0.8321         |   0.7132       |\n",
-    "| 300               |    0.0010               |      0.0007            |   0.8088         |   0.7500        |"
+    "| 300               |    0.0010               |      0.0007            |   0.8088         |   0.7500        |\n"
    ]
   },
   {
@@ -848,7 +857,15 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "Support vector machines work by finding hidden divisions within data. Imagine if you were trying to teach a computer to recognize clouds in the sky. SVM would approach this problem by looking at each part of the sky and drawing a line to divide blue from white. You can imagine this process happening in two dimensions or three dimensions. For a problem as complex as this one, we use dozens of dimensions but the problem is still the same. We are trying to separate students who will pass vs. those that won't, and SVM helps us find the borders between them."
+    "First we start out with a set of features about each student (like age, sex, family size, activities, etc) along with information on whether each student passed or failed. Using this information, we train an algorithm to predict whether future students will pass or fail based on the original set of features. \n",
+    "\n",
+    "This can be accomplished with a number of different algorithms. For this particular task, we chose to use an algorithm called support vector machines because it made the most accurate predictions of all the algorithsm we tested. \n",
+    "\n",
+    "Support vector machines work by finding hidden divisions within data. Imagine if you were trying to teach a computer to recognize clouds in the sky. SVM would approach this problem by looking at each part of the sky and drawing a line to divide blue from white. The boundary is drawn so as to maximize the accuracy of the algorithm (i.e. correctly places passed vs. failed students on one side or the other). You can imagine this process happening in two dimensions, three dimensions, or more. \n",
+    "\n",
+    "For a problem as complex as this one, it is difficult to draw a border between passing and failing students so we use dozens of dimensions to draw our border. With more dimensions, however, we aren't just drawing a line but instead are trying to create a hyperplane to separate the data. \n",
+    "\n",
+    "Using this function created with students we already know passed or not, the SVM can look at new students' data and predict who will pass and who will fail based on which side of the hyperplane the new students fall.\n"
    ]
   },
   {
@@ -869,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -878,10 +895,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Made predictions in 0.0054 seconds.\n",
-      "Tuned model has a training F1 score of 0.9717.\n",
-      "Made predictions in 0.0018 seconds.\n",
-      "Tuned model has a testing F1 score of 0.7919.\n"
+      "Made predictions in 0.0039 seconds.\n",
+      "Tuned model has a training F1 score of 0.8434.\n",
+      "Made predictions in 0.0015 seconds.\n",
+      "Tuned model has a testing F1 score of 0.7862.\n"
      ]
     }
    ],
@@ -903,7 +920,7 @@
     "\n",
     "# TODO: Make an f1 scoring function using 'make_scorer' \n",
     "\n",
-    "f1_scorer = make_scorer(fbeta_score, pos_label=\"yes\", beta=2)\n",
+    "f1_scorer = make_scorer(fbeta_score, pos_label=\"yes\", beta=1)\n",
     "\n",
     "# TODO: Perform grid search on the classifier using the f1_scorer as the scoring method\n",
     "\n",
@@ -911,12 +928,14 @@
     "\n",
     "# TODO: Fit the grid search object to the training data and find the optimal parameters\n",
     "\n",
+    "np.random.seed(0)\n",
     "grid_obj = grid_obj.fit(X_train, y_train)\n",
     "\n",
     "# Get the estimator\n",
     "clf = grid_obj.best_estimator_\n",
     "\n",
     "# Report the final F1 score for training and testing after parameter tuning\n",
+    "print clf\n",
     "print \"Tuned model has a training F1 score of {:.4f}.\".format(predict_labels(clf, X_train, y_train))\n",
     "print \"Tuned model has a testing F1 score of {:.4f}.\".format(predict_labels(clf, X_test, y_test))"
    ]
@@ -935,7 +954,7 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "The final F1 score is 0.9717 for training and 0.79 testing, both of which are an improvement from the previous models."
+    "The final F1 score is 0.8434 for training and 0.7862 testing, both of which are an improvement from the previous models."
    ]
   },
   {
