--- a/projects/creating_customer_segments/customer_segments.ipynb
+++ b/projects/creating_customer_segments/customer_segments.ipynb
@@ -315,9 +315,9 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "Sample 0: Has very low detergents_paper sales. Very high frozen and fresh sales. Most likely a restaurant or cafe (that doesn't sell very many deli sandwiches).\n",
-    "Sample 1: Very high grocery and detergents_paper. Most likely a grocery store or retailer. \n",
-    "Sample 3: Very low frozen. Modest grocery and detergents_paper. Very high milk. Also most likely a grocer/retailer.\n",
+    "Sample 0: Has detergents_paper sales that are ~5 standard deviations below the mean, frozen sales 7 stds above the mean, and grocery sales 2 stds above the mean. This profile is most likely consistent with a restaurant, cafe, or hotel (that doesn't sell very many deli sandwiches). Though we may have expected higher fresh sales.\n",
+    "Sample 1: Grocery sales 3 stds above the mean and detergents_paper sales are 5 stds above the mean. Most consistent with a grocery store or retailer. \n",
+    "Sample 3: Near the minimum value for frozen sales. Grocery sales 1/2 std above the mean and detergents_paper sales just less than 1 std above the mean. Milks sales >1 std above the mean. Also most consistent with a grocer/retailer but not moving as much volume as sample 1.\n",
     "\n"
    ]
   },
@@ -1954,7 +1954,10 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "Segment 1 is likely a grocery store (high milk, grocery, and detergents_paper). Segment 0 is likely a restaurant (high fresh and frozen, low detergents_paper)."
+    "\n",
+    "This graph depicts each customer according to two parameters, dimension 1 and dimension 2. Dimension one seems to correlate with restaurant type establishments (above average fresh/frozen, below average detergents_paper, see PCA figure above).\n",
+    "\n",
+    "In the graph, dimension 1 is on the x axis and dimension 2 is on the y axis. The cluster on the right hand side of the graph corresponds to examples consistent with dimension 1 (above average fresh/frozen, below average detergents_paper), which translates to examples that are most likely restaurants. The clusters on the left are more likely grocers/retailers because they have low dimension 1 values. Dimension 2 appears to have much less of an impact on the location of the cluster centers because there is very little difference in the y values of the clusters."
    ]
   },
   {
@@ -2000,7 +2003,7 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "This outcome is consistent with my original impression of these three data points. Samples 1 and 2 have higher detergents_paper and grocery (consistent with dimension 1) and low fresh and frozen (consistent with dimension 2). Sample 0 is the opposite."
+    "This outcome is consistent with my original impression of these three data points. Samples 1 and 2 have above average detergents_paper and grocery (consistent with dimension 1) and below average fresh and frozen (consistent with dimension 2). Sample 0 has detergents_paper sales that are far below the average, frozen sales well above average, and grocery above average, which seems msot consistent with a restaurant, cafe, or hotel."
    ]
   },
   {
@@ -2036,7 +2039,7 @@
     "\n",
     "Less frequent deliveries will have only a small impact on customers who do not buy items with a short shelf life and who do not have a variable need for supplies. This category would include retailers and grocers who buy large amounts of detergents_paper and grocery items. Restaurants would be negatively affected because they buy primarily fresh and frozen items. They also likely have variable needs for goods depending on how busy they are from day to day. Decreasing delivery frequency could impact the ability of restaurants/cafes to respond to variable customer activity.\n",
     "\n",
-    "We could determine which group is affected most by calculating the percentage of customers from each group who cancelled their orders after the delivery change took effect."
+    "To run an A/B test the company could assign each customer to one of two groups based on the clustering assignments above. Customers in segment 0 would recieve deliveries based on the original scheduling system while customers in segment 1 would recieve deliveries based on a more limited schedule. The outcome of interest for the experiment would be retention. So they would compare the number of lost customers from each group. They could also assess the impact of the intervention with customer surveys.\n"
    ]
   },
   {
